k8s-azure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-demo
  labels:
    app: django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - image: containerdemo2708.azurecr.io/nathivitas/demo:latest
          name: django
          ports:
            - containerPort: 8000
              name: gunicorn
